# gh-verify

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HACKING.md  README.md  SECURITY.md  action.yml  build.zig  build.zig.zon  devenv.nix  devenv.yaml  flake.nix  plan.md  shell.nix  why3find.json
.claude/: plan.md
.github/: dependabot.yml
.github/workflows/: check-pr.yml  ci.yml  docs.yml  edge.yml  latest.yml  mutants.yml  release.yml  scorecard.yml  verify-repo.yml
action/check-pr/: README.md  action.yml
action/check-release/: README.md  action.yml
benchmarks/: README.md  collect.py  report.py  run.sh  schema.json
benchmarks/cases/: angular-build-github-actions-update.json  angular-default-strategy-eager.json  angular-parser-unclosed-element-revert.json  bubbles-filepicker-unchecked-assertion.json  calcom-auth-view-prisma-schema.json  calcom-getip-auth-api-test.json  clickhouse-datalake-google-credentials.json  clickhouse-sort-overflow-deadlock-coverage.json  elasticsearch-esql-spec-indices-flags.json  ember-internal-test-helpers-public-exports.json  express-ci-only.json  express-docs-only.json  express-package-json-only.json  express-response-handler-fix.json  express-test-only.json  fastapi-api-only.json  fastapi-docs-in-docs-dir.json  jquery-ajax-binary-data-ie-tests.json  k8s-go-version-config-only.json  k8s-statefulset-stdlib-only.json  nextjs-evals-multi-domain.json  nextjs-ui-config.json  nextjs-vendor-update.json  pass-021-ember-each-null-items.json  pass-022-ember-current-when-nested-routes.json  pass-023-vue-transition-rapid-toggle.json  pass-027-react-fragment-ref-focus-delegation.json  pass-028-ember-destroyable-metadata-gc.json  pass-029-vue-vapor-expression-cache-circular.json  prisma-database-docs-config.json  prisma-init-db-migration.json  prisma-mariadb-adapter-fix.json  prisma-platform-status.json  prisma-port-fixes-742.json  prisma-remove-memory-tests.json  prisma-studio-update.json  python-frozendict-copy-critical-section.json  (+33 more)
common/: scanner.h
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: bench.rs  config.rs  gh_cli.rs  lib.rs  main.rs  ossinsight.rs  range.rs  verify.rs
crates/cli/src/adapters/: github.rs
crates/cli/src/attestation/: gh_cli.rs  mod.rs  release.rs
crates/cli/src/github/: client.rs  graphql.rs  mod.rs  pr_api.rs  release_api.rs  repo_api.rs  types.rs
crates/cli/src/output/: assessment_human.rs  human.rs  json.rs  mod.rs  sarif.rs
crates/cli/src/policy/: default.rego  mod.rs  nist-ssdf.rego  openssf.rego  oss.rego
crates/cli/src/rules/: detect_missing_test.rs  detect_stale_approval.rs  detect_unscoped_change.rs  engine.rs  mod.rs  verify_branch_protection.rs  verify_conventional_commit.rs  verify_issue_linkage.rs  verify_pr_size.rs  verify_release_integrity.rs
crates/cli/src/util/: mod.rs  symbol_extractor.rs
crates/core/: Cargo.toml
crates/core/benches/: test_coverage.rs
crates/core/src/: approval.rs  assessment.rs  branch_protection.rs  control.rs  conventional.rs  coverage.rs  evidence.rs  integrity.rs  lib.rs  linkage.rs  profile.rs  scope.rs  size.rs  slsa.rs  test_coverage.rs  union_find.rs  verdict.rs
crates/core/src/controls/: binary_artifact_check.rs  branch_history_integrity.rs  branch_protection.rs  branch_protection_enforcement.rs  build_isolation.rs  build_provenance.rs  conventional_title.rs  dependency_pinning.rs  description_quality.rs  hosted_build_platform.rs  issue_linkage.rs  merge_commit_policy.rs  mod.rs  pr_size.rs  provenance_authenticity.rs  release_traceability.rs  required_reviewers.rs  required_status_checks.rs  review_independence.rs  sast_tool_presence.rs  scoped_change.rs  security_file_change.rs  source_authenticity.rs  stale_review.rs  test_coverage.rs  two_party_review.rs  workflow_permissions.rs
crates/core/src/controls/tests/: review_independence_hardening.rs  source_authenticity_hardening.rs
crates/core/src/tests/: assessment_hardening.rs  control_hardening.rs  evidence_hardening.rs  integrity_hardening.rs  linkage_hardening.rs  profile_hardening.rs  scope_hardening.rs  union_find_hardening.rs
docs/: compliance-mapping.md  custom-policies.md  fail-open-design.md  improvement-spec.md  positioning.md
policy/: slsa-comprehensive.rego
script/: build.sh
scripts/: verify.sh
src/: main.zig
tests/: classify.sh  run.sh
(+61 files in other folders)
