[workspace]
members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.18.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
libverify-core = "0.8.1"
libverify-github = "0.8.1"
libverify-output = "0.8.1"
libverify-policy = "0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
rayon = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
