[package]
name = "gh-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SLSA-based GitHub SDLC health checker"

[lib]
name = "gh_verify"
path = "src/lib.rs"

[[bin]]
name = "gh-verify"
path = "src/main.rs"

[[bin]]
name = "gh-verify-bench"
path = "src/bin/bench.rs"

[dependencies]
gh-verify-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
colored = { workspace = true }
regorus = { workspace = true }
tempfile = { workspace = true }
