[package]
name = "gh-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GitHub SDLC health checker"

[lib]
name = "gh_verify"
path = "src/lib.rs"

[[bin]]
name = "gh-verify"
path = "src/main.rs"

[[bin]]
name = "gh-verify-bench"
path = "src/bin/bench.rs"

[dependencies]
libverify-core = { workspace = true }
libverify-policy = { workspace = true }
libverify-output = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
colored = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
