[package]
name = "gh-verify-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure verification logic for gh-verify, formally verifiable with Creusot"

[dependencies]
serde = { workspace = true }
creusot-contracts = { workspace = true, optional = true }

[features]
default = []
contracts = ["creusot-contracts"]
