[package]
name = "gh-verify-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure verification logic for gh-verify, formally verifiable with Creusot"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
creusot-std = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "test_coverage"
harness = false
